# otaberu

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  install.sh  script.py
.github/: build.yml
.github/workflows/: build.yml
src/: agent.rs  cli.rs  develop.rs  main.rs  store.rs  store_.rs
src/commands/: docker.rs  mod.rs
src/core/: core.rs  mod.rs
src/data_storage/: data_storage.rs
src/develop/: docker_tty.rs  mdns.rs  unix_socket.rs
src/external_api/: messages.rs  mod.rs  unix_socket.rs  web_socket.rs
src/node/: mod.rs  node.rs
src/store/: config.rs  job_manager.rs  key_manager.rs  messages.rs  mod.rs  network_manager.rs  robot_manager.rs
src/utils/: files.rs
