[package]
name = "robot-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "robot-agent"
path = "src/main.rs"


[dependencies]
async-trait = "0.1.75"
bollard = "0.15.0"
clap = { version = "4.4.11", features = ["derive"] }
futures-util = "0.3.30"
rust_socketio = { version = "0.4.4", features = ["async"]}
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
openssl = { version = "0.10", features = ["vendored"] }


