[package]
name = "robot-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "robot-agent"
path = "src/main.rs"


[dependencies]
async-trait = "0.1.75"
bollard = "0.15.0"
clap = { version = "4.4.11", features = ["derive"] }
futures-util = "0.3.30"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "full", "io-util", "tracing"] }
console-subscriber = "0.1.5"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

termion = "3.0.0"
walkdir = "2.4.0"
reqwest = { version = "0.11.24", features = ["multipart"] }
tracing-test = "0.2.4"
libp2p = { version = "0.53.2", features = ["tokio", "mdns", "gossipsub", "macros", "tcp", "yamux", "noise", "quic", "kad", "full"]}
futures = "0.3.30"
base64 = "0.22.0"
libp2p-identity = { version="0.2.8", features=["peerid"]}
openssl = { version = "0.10", features = ["vendored"] }
libp2p-kad = "0.45.3"


